added regions and spheres url for lists
